# agentport

./: .gitignore  README.md  package.json  progress.md  pyproject.toml
agentport/: __init__.py  models.py  orchestrator.py
agentport/cli/: main.py
agentport/core/: docs_registry.py
agentport/core/generation/: duties_writer.py  gitagent_writer.py  pr_writer.py  report_writer.py
agentport/core/gitops/: branch.py  clone.py  commit.py  pr.py
agentport/core/learning/: failure_analyzer.py  memory_updater.py  pattern_store.py
agentport/core/llm/: __init__.py  reviewer.py
agentport/core/mapping/: claude_cursor_mapper.py  crewai_mapper.py  generic_mapper.py  langgraph_mapper.py
agentport/core/scanner/: compatibility_profiler.py  file_tree.py  framework_detector.py  prompt_extractor.py  python_ast_extractor.py  repository_extractor.py  tool_schema_extractor.py  yaml_extractor.py
agentport/core/validation/: gapman_runner.py  readiness_score.py  validation_parser.py
agents/agentport/: DUTIES.md  RULES.md  SOUL.md  agent.yaml
cli/: agentport.mjs
examples/claude-cursor-demo-agent/: .cursorrules  CLAUDE.md
examples/crewai-demo-agent/: agents.yaml  tasks.yaml
examples/langgraph-demo-agent/: agent_graph.py
tests/: test_cli_commands.py  test_compatibility_profiles.py  test_crewai_mapping.py  test_docs_registry.py  test_framework_detection.py  test_gitagent_generation.py  test_golden_outputs.py  test_langchain_mapping.py  test_langgraph_mapping.py  test_readiness_score.py  test_schema_compatibility.py  test_validation_parser.py
(+93 files in other folders)
