[project]
name = "agentport"
version = "0.1.0"
description = "CLI-first multi-agent GitAgent porting pipeline."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
agentport = "agentport.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
